--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   "bugs": {
     "url": "https://github.com/tcoldmf/react-bootstrap-pagination/issues"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "homepage": "https://github.com/tcoldmf/react-bootstrap-pagination#readme"
 }
